--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     </head>
     <body>
         <header>
-            <h1>Welcome to West Brooklyn Community High School</h1>
+            <div id=logo>
+                <img src="css/"/>
+                <div id="logoTextContainer">
+                    <div id="logoText1">
+                        <h1>West Brooklyn</h1>
+                    </div>
+                    <div id="logoText2">
+                        <h3>Community High School</h3>
+                    </div>
+                </div>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#">HOME</a></li>
